Updated to v3.0.1
Optimisations and minor fixes