@@ -23,6 +23,7 @@ import org.terraform.tree.SaplingOverrider;
 import org.terraform.utils.version.Version;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashSet;
 import java.util.Random;
 import java.util.Set;
@@ -65,11 +66,14 @@ public class TerraformGeneratorPlugin extends DrycellPlugin implements Listener 
         String version = Version.getVersionPackage();
         logger.info("Detected version: " + version);
         try {
-            injector = (NMSInjectorAbstract) Class.forName("org.terraform." + version + ".NMSInjector").newInstance();
+			injector = (NMSInjectorAbstract) Class.forName("org.terraform." + version + ".NMSInjector").getDeclaredConstructor().newInstance();
+
         } catch (ClassNotFoundException e) {
             e.printStackTrace();
             logger.error("&cNo support for this version has been made yet!");
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException 
+        		| IllegalArgumentException | InvocationTargetException 
+        		| NoSuchMethodException | SecurityException e) {
             e.printStackTrace();
             logger.error("&cSomething went wrong initiating the injector!");
 
@@ -85,7 +89,7 @@ public class TerraformGeneratorPlugin extends DrycellPlugin implements Listener 
     
     @Override
     public void onDisable() {
-    	NativeGeneratorPatcherPopulator.flushChanges();
+    	//NativeGeneratorPatcherPopulator.flushChanges();
     }
     
     /**
